# unsealed

./: .gitignore  README.md  requirements.txt
unsealed/: README.rst  decoder.py  file.py  main.py  pyproject.toml  requirements.txt  ruff.toml
unsealed/actor/: action.py  actor.py  resource.py
unsealed/animation/: animation.py  keyframe.py
unsealed/assets/: action.py  actor.py  animation.py  blob.py  bone.py  directory.py  geometry.py  keyframe.py  material.py  mesh.py  model.py  skeleton.py  terrain.py  vertex.py
unsealed/core/: asset.py
unsealed/decoder/act/: file.py
unsealed/decoder/an1/: file.py
unsealed/decoder/bn1/: bone.py  file.py
unsealed/decoder/map/: file.py
unsealed/decoder/mat/: file.py
unsealed/decoder/mdt/: file.py
unsealed/decoder/men/: file.py
unsealed/decoder/ms1/: file.py  geometry.py  material.py  mesh.py  vertex.py
unsealed/decoder/sfx/: file.py
unsealed/decoder/sha/: file.py
unsealed/decoder/spr/: file.py
unsealed/decoder/tex/: file.py
unsealed/encoder/: glb.py  gltf.py  heightmap.py  obj.py
unsealed/encoder/gltf/: gltf.py
unsealed/encoder/heightmap/: file.py
unsealed/formats/: base.py
unsealed/geometry/: geometry.py  mesh.py  vertex.py
unsealed/material/: material.py
unsealed/model/: bone.py  geometry.py  material.py  mesh.py  model.py  skeleton.py  vertex.py
unsealed/pipeline/: actor_pipeline.py  main_pipeline.py  map_pipeline.py  object_pipeline.py  texture_pipeline.py
unsealed/skeleton/: bone.py  skeleton.py
unsealed/terrain/: terrain.py
unsealed/utils/: file.py  matrix.py  strings.py
(+98 files in other folders)
